src/data-publication/ChangeLog/ChangeLogTable.css
#ChangeLogTable {
  min-height: 25vh;
  overflow: auto;
}


#ChangeLogTable .result-count {
  margin: 3rem 0;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

#ChangeLogTable .result-count .header {
  text-transform: uppercase;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  margin: 0;
  margin-right: 3rem;
}

#ChangeLogTable .result-count .body {
  font-size: 1.7rem;
  margin: 0;
  padding: 0;
  padding-bottom: 1rem;
}

#ChangeLogTable .result-count img {
  height: 25px;
  margin-right: 1rem;
}

#ChangeLogTable .result-count .highlight {
  font-weight: bolder;
  font-size: 2.3rem;
  padding: 0 .25rem;
  color: #0b6e4f;
}

#ChangeLogTable .change-row {
  align-items: flex-start;
  padding: 3rem 1rem;
}

#ChangeLogTable .change-row.header {
  padding: 1rem 1rem 1rem;
  border-bottom: 1px solid black;
}

#ChangeLogTable .change-row.split {
  justify-content: flex-start;
  align-items: flex-start;
}

#ChangeLogTable .change-row > * {
  flex-basis: 25%;
}

#ChangeLogTable .change-row .date .icon {
  display: none;
  margin-right: 1rem;
}

#ChangeLogTable .change-row .date,
#ChangeLogTable .change-row .date.header {
  text-transform: capitalize;
  padding-left: .5rem;
}


#ChangeLogTable .change-row .changeType {
  padding-left: 1rem;
}

#ChangeLogTable .change-row .changeType .pill {
  margin: 0
}

#ChangeLogTable .change-row .type {
  width: 200px;
  text-align: center;
  padding: .3rem .5rem;
  border-radius: 7px;
  text-transform: uppercase;
  color: white;
  font-size: 1.3rem;
}

#ChangeLogTable .change-row .type:hover,
#ChangeLogTable .change-row .product:not(.header):hover {
  cursor: pointer;
  user-select: none;
}

#ChangeLogTable .change-row .product {
  text-transform: capitalize;
}

#ChangeLogTable .change-row button.product,
#ChangeLogTable .search-link {
  background: none;
  color: black;
  margin: 0;
  padding: 0;
  text-align: left;
  font-weight: normal;
  font-size: 1.7rem;
  display: inline-block;
}

/** Color - Correction */
#ChangeLogTable .change-row .type.correction {
  background-color: #c41613;
}

/** Color - Update */
#ChangeLogTable .change-row .type.update  {
  background-color: #254b87;
}

/** Color - Release */
#ChangeLogTable .change-row .type.release  {
  background-color: #0b6e4f;
}

/** Color - Notice */
#ChangeLogTable .change-row .type.notice  {
  background-color: #dc731c;
  color: white;
}

#ChangeLogTable .change-row .product.selected {
  font-weight: bold;
}

#ChangeLogTable .change-row .description {
  flex-basis: 50%;
}

#ChangeLogTable .change-row .type.header {
  color: black;
  white-space: nowrap;
  text-transform: capitalize;
}

#ChangeLogTable .change-row > .header {
  width: 33%;
  margin: 0;
  text-decoration-color: grey;
}

#ChangeLogTable .change-row .pill {
  max-width: 100px !important;
  margin-bottom: 0;
}

#ChangeLogTable .change-row:not(.header) {
  border-top: 1px solid lightgrey;
}

#ChangeLogTable .change-row .column,
#ChangeLogTable .change-row .header {
  min-width: 165px;
}


@media screen and (max-width: 850px) {
  #ChangeLogTable {
    margin-top: 3rem;
  }

  #ChangeLogTable .result-count {
    margin: 3rem 0;
    font-size: 1.9rem;
    text-align: center;
  }
}

